force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <description>These are Orders (signups with a REP) placed through TrueCost.</description>
    <label>Order</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>