force-app/main/default/objects/Order__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Account number for gas choice premises</description>
    <inlineHelpText>Account number for gas choice premises</inlineHelpText>
    <label>Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>