force-app/main/default/objects/Order__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the order active (ie, not expired or replaced by a more current order?)</description>
    <inlineHelpText>Is the order active (ie, not expired or replaced by a more current order?)</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>