force-app/main/default/objects/Order__c/fields/Alternate_REP_email_2__c.field-meta.xml
<CustomField>
    <fullName>Alternate_REP_email_2__c</fullName>
    <label>Alternate REP email 2</label>
    <type>Email</type>
</CustomField>