force-app/main/default/objects/Order__c/fields/Authorized_Representative__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Representative__c</fullName>
    <description>The customer has selected someone who can speak to their REP on their behalf</description>
    <inlineHelpText>The customer has selected someone who can speak to their REP on their behalf</inlineHelpText>
    <label>Authorized Representative</label>
    <length>50</length>
    <type>Text</type>
</CustomField>