force-app/main/default/objects/Order__c/fields/AutoPay__c.field-meta.xml
<CustomField>
    <fullName>AutoPay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer wants to pay automatically via payment card</description>
    <inlineHelpText>Customer wants to pay automatically via payment card</inlineHelpText>
    <label>AutoPay</label>
    <type>Checkbox</type>
</CustomField>