force-app/main/default/objects/Order__c/fields/Bill_Doc_Credited__c.field-meta.xml
<CustomField>
    <fullName>Bill_Doc_Credited__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Was credit given back to the REP for this order?  If so, which bill doc contained the credit?</description>
    <inlineHelpText>Was credit given back to the REP for this order?  If so, which bill doc contained the credit?</inlineHelpText>
    <label>Bill Doc Credited</label>
    <referenceTo>Billing_Documents__c</referenceTo>
    <relationshipLabel>Orders (Bill Doc Credited)</relationshipLabel>
    <relationshipName>CreditedOrders</relationshipName>
    <type>Lookup</type>
</CustomField>