force-app/main/default/objects/Order__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <description>Is this order within its residual billing range? (545 days or 18 months)</description>
    <formula>AND(
 OR(Record_Type_Name__c = &quot;Electric Order&quot;,Record_Type_Name__c = &quot;Commercial Electric Order&quot;),
TODAY()- DATEVALUE(Order_Confirmed_Date__c) &lt; 545, 
 Plan_Expiration__c &gt; TODAY(),
 ISPICKVAL(Order_Status__c, &quot;confirmed&quot;) 
)</formula>
    <inlineHelpText>Is this order within its residual billing range? (545 days or 18 months)</inlineHelpText>
    <label>Billable?</label>
    <type>Checkbox</type>
</CustomField>