force-app/main/default/objects/Order__c/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <description>post this string to useragentstring.com for browser details.</description>
    <inlineHelpText>post this string to useragentstring.com for browser details.</inlineHelpText>
    <label>Browser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>