force-app/main/default/objects/Order__c/fields/Business_Organization_Nomination__c.field-meta.xml
<CustomField>
    <fullName>Business_Organization_Nomination__c</fullName>
    <description>Business/Organization that the customer wants to nominate as a recipient of our donation</description>
    <inlineHelpText>Business/Organization that the customer wants to nominate as a recipient of our donation</inlineHelpText>
    <label>Business/Organization Nomination</label>
    <length>50</length>
    <type>Text</type>
</CustomField>