force-app/main/default/objects/Order__c/fields/Business_Organization_Nomination_Locatio__c.field-meta.xml
<CustomField>
    <fullName>Business_Organization_Nomination_Locatio__c</fullName>
    <description>Where is the business/organization located?</description>
    <inlineHelpText>Where is the business/organization located?</inlineHelpText>
    <label>Business/Organization Nomination Locatio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>