force-app/main/default/objects/Order__c/fields/Calendar_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Incentive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calendar Incentive</label>
    <type>Checkbox</type>
</CustomField>