force-app/main/default/objects/Order__c/fields/CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>CaseSafeID__c</fullName>
    <description>the 18-character case-insensitive version of this record&#39;s id</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>the 18-character case-insensitive version of this record&#39;s id</inlineHelpText>
    <label>CaseSafeID</label>
    <type>Text</type>
</CustomField>