force-app/main/default/objects/Order__c/fields/Choice_Multiyear_Continuation__c.field-meta.xml
<CustomField>
    <fullName>Choice_Multiyear_Continuation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This order is a continuation of a previous order</description>
    <inlineHelpText>This order is a continuation of a previous order</inlineHelpText>
    <label>Choice Multiyear Continuation</label>
    <type>Checkbox</type>
</CustomField>