force-app/main/default/objects/Order__c/fields/Clawback_Date__c.field-meta.xml
<CustomField>
    <fullName>Clawback_Date__c</fullName>
    <description>If the customer broke the contract early, when did that happen?</description>
    <inlineHelpText>If the customer broke the contract early, when did that happen?</inlineHelpText>
    <label>Clawback Date</label>
    <type>DateTime</type>
</CustomField>