force-app/main/default/objects/Order__c/fields/Clawback_Value__c.field-meta.xml
<CustomField>
    <fullName>Clawback_Value__c</fullName>
    <description>What is the Clawback associated with this order?</description>
    <inlineHelpText>What is the Clawback associated with this order?</inlineHelpText>
    <label>Clawback Value</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>