force-app/main/default/objects/Order__c/fields/Confirmation_Code__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Code__c</fullName>
    <description>Gas choice confirmation codes</description>
    <inlineHelpText>Gas choice confirmation codes</inlineHelpText>
    <label>Confirmation Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>