force-app/main/default/objects/Order__c/fields/Confirmation_Code_Year__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Code_Year__c</fullName>
    <label>Confirmation Code Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>