force-app/main/default/objects/Order__c/fields/Conga_Solution_URL__c.field-meta.xml
<CustomField>
    <fullName>Conga_Solution_URL__c</fullName>
    <formula>&quot;&amp;id=&quot; +  Premise__r.Id  +
&quot;&amp;DV0=&quot; + text(round(Contract_Length__c/12, 0)) +
&quot;&amp;QMode=3&quot;+
&quot;&amp;TemplateId=a14300000020zfH&quot; +
&quot;&amp;EmailTemplateId=00X30000001TRCK&quot; +
&quot;&amp;DS4=1&quot; +
&quot;&amp;FP0=1&quot; +
&quot;&amp;LG0=0&quot; +
&quot;&amp;LG4=1&quot; +
&quot;&amp;LG1=Delegation+Agreement&quot; +
&quot;&amp;LG2=7&quot; +
&quot;&amp;LG5=&quot; + $User.Id +
&quot;&amp;LG6=&quot; + $User.Id +
&quot;&amp;LG7=DA+Follow-up&quot; +
&quot;&amp;EmailToID=00330000015hWJe&quot; +
&quot;&amp;EmailRelatedToId=&quot; + Id +
&quot;&amp;EmailAdditionalTo=&quot; + Customer_Email__c +
&quot;&amp;EmailFromId=00e30000001pUls&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Solution URL</label>
    <type>Text</type>
</CustomField>