force-app/main/default/objects/Order__c/fields/Conga_UI_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Conga_UI_Hyperlink__c</fullName>
    <formula>HYPERLINK(&quot;https://workflow.appextremes.com/apps/Conga/PointMerge.aspx?SessionId=&quot; 
&amp; $Api.Session_ID 
&amp; &quot;&amp;ServerUrl=&quot; &amp; $Api.Partner_Server_URL_80 
&amp; Conga_Solution_URL__c, &quot;Check&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga UI Hyperlink</label>
    <type>Text</type>
</CustomField>