force-app/main/default/objects/Order__c/fields/Conga_Workflow_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Conga_Workflow_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For the automatic reply to new orders from the website.</description>
    <inlineHelpText>For the automatic reply to new orders from the website.</inlineHelpText>
    <label>Conga Workflow Trigger</label>
    <type>Checkbox</type>
</CustomField>