force-app/main/default/objects/Order__c/fields/ContactID_Kludge__c.field-meta.xml
<CustomField>
    <fullName>ContactID_Kludge__c</fullName>
    <formula>Contact__r.Contact_ID_kludge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactID Kludge</label>
    <type>Text</type>
</CustomField>