force-app/main/default/objects/Order__c/fields/Contract_Length__c.field-meta.xml
<CustomField>
    <fullName>Contract_Length__c</fullName>
    <description>How long is the contract (in months)</description>
    <inlineHelpText>12 for a 12 month contract, 0 for a month to month contract</inlineHelpText>
    <label>Contract Length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>