force-app/main/default/objects/Order__c/fields/Control__c.field-meta.xml
<CustomField>
    <fullName>Control__c</fullName>
    <description>Control number for NE/WY Choice account</description>
    <inlineHelpText>Control number for NE/WY Choice account</inlineHelpText>
    <label>Control</label>
    <length>10</length>
    <type>Text</type>
</CustomField>