force-app/main/default/objects/Order__c/fields/Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which credit memo is the clawback/reversal associated with?</description>
    <inlineHelpText>Which credit memo is the clawback/reversal associated with?</inlineHelpText>
    <label>Credit Memo</label>
    <referenceTo>Billing_Documents__c</referenceTo>
    <relationshipLabel>Orders (Credit Memo)</relationshipLabel>
    <relationshipName>CreditMemoOrder</relationshipName>
    <type>Lookup</type>
</CustomField>