force-app/main/default/objects/Order__c/fields/Critical_Care__c.field-meta.xml
<CustomField>
    <fullName>Critical_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the customer a critical care customer?</description>
    <inlineHelpText>Is the customer a critical care customer?</inlineHelpText>
    <label>Critical Care</label>
    <type>Checkbox</type>
</CustomField>