force-app/main/default/objects/Order__c/fields/Current_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Current_Supplier__c</fullName>
    <label>Current Supplier</label>
    <length>35</length>
    <type>Text</type>
</CustomField>