force-app/main/default/objects/Order__c/fields/Customer_Acceptance_of_Plan_Terms__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acceptance_of_Plan_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I accept the above terms and disclosures of the plan as disclosed in the Terms of Service, Electricity Facts Label, and Your Rights as a Customer links</description>
    <inlineHelpText>I accept the above terms and disclosures of the plan as disclosed in the Terms of Service, Electricity Facts Label, and Your Rights as a Customer links</inlineHelpText>
    <label>Customer Acceptance of Plan Terms</label>
    <type>Checkbox</type>
</CustomField>