force-app/main/default/objects/Order__c/fields/Customer_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Customer_Date_of_Birth__c</fullName>
    <label>Customer Date of Birth</label>
    <type>Date</type>
</CustomField>