force-app/main/default/objects/Order__c/fields/Customer_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_IP_Address__c</fullName>
    <description>Customer IP address at the time the order was placed</description>
    <inlineHelpText>Customer IP address at the time the order was placed</inlineHelpText>
    <label>Customer IP Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>