force-app/main/default/objects/Order__c/fields/Customer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone_Number__c</fullName>
    <inlineHelpText>The customer&#39;s primary phone number</inlineHelpText>
    <label>Customer Phone Number</label>
    <type>Phone</type>
</CustomField>