force-app/main/default/objects/Order__c/fields/Customer_Service_Email_For_Order__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Email_For_Order__c</fullName>
    <label>Customer Service Email</label>
    <type>Email</type>
</CustomField>