force-app/main/default/objects/Order__c/fields/Customer_Service_Phone_Number_For_Order__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Phone_Number_For_Order__c</fullName>
    <label>Customer Service Phone Number</label>
    <type>Phone</type>
</CustomField>