force-app/main/default/objects/Order__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <inlineHelpText>Two digits representing the month of birth</inlineHelpText>
    <label>Date of Birth Month</label>
    <length>2</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>