force-app/main/default/objects/Order__c/fields/Date_of_Birth_Day__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Day__c</fullName>
    <description>1-2 digits representing the day of birth</description>
    <inlineHelpText>1-2 digits representing the day of birth (ex: Jan 7, 1980 would be 0 or 07)</inlineHelpText>
    <label>Date of Birth Day</label>
    <length>2</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>