force-app/main/default/objects/Order__c/fields/Date_of_Birth_Year__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Year__c</fullName>
    <description>Year the customer was born (4 digits)</description>
    <inlineHelpText>Year the customer was born (4 digits)</inlineHelpText>
    <label>Date of Birth Year</label>
    <length>4</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>