force-app/main/default/objects/Order__c/fields/DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Name__c</fullName>
    <description>Business name that&#39;s placing the order</description>
    <inlineHelpText>Business name that&#39;s placing the order</inlineHelpText>
    <label>Business Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>