force-app/main/default/objects/Order__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <label>Deposit (amount in $)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>