force-app/main/default/objects/Order__c/fields/Deposit_Info__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Info__c</fullName>
    <description>Instructions or contact information regarding customer deposits.</description>
    <inlineHelpText>Instructions or contact information regarding customer deposits.</inlineHelpText>
    <label>Deposit Instructions</label>
    <type>TextArea</type>
</CustomField>