force-app/main/default/objects/Order__c/fields/Deposit_Requested__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The provider marked this order as &quot;pending deposit&quot; before it was confirmed or cancelled.</description>
    <inlineHelpText>The provider marked this order as &quot;pending deposit&quot; before it was confirmed or cancelled.</inlineHelpText>
    <label>Deposit Requested</label>
    <type>Checkbox</type>
</CustomField>