force-app/main/default/objects/Order__c/fields/Drivers_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_Number__c</fullName>
    <label>Drivers License Number</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>