force-app/main/default/objects/Order__c/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <description>DUNS number (no dashes, spaces)</description>
    <inlineHelpText>DUNS number (no dashes, spaces)</inlineHelpText>
    <label>DUNS</label>
    <length>9</length>
    <type>Text</type>
</CustomField>