force-app/main/default/objects/Order__c/fields/Earliest_Fixed_Position__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Fixed_Position__c</fullName>
    <description>FOM Date of the earliest fixed position for this order</description>
    <inlineHelpText>FOM Date of the earliest fixed position for this order</inlineHelpText>
    <label>Earliest Fixed Position</label>
    <type>Date</type>
</CustomField>