force-app/main/default/objects/Order__c/fields/EFL_URL_For_Order__c.field-meta.xml
<CustomField>
    <fullName>EFL_URL_For_Order__c</fullName>
    <label>EFL URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>