force-app/main/default/objects/Order__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Customer Email address.</description>
    <inlineHelpText>Customer Email address.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>