force-app/main/default/objects/Order__c/fields/Enrollment_Type__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Type__c</fullName>
    <formula>IF(PMVI_Flag__c  = TRUE, &quot;Move-In&quot;, IF(ISBLANK( InitialDateofService__c), &quot;Standard Switch&quot;, &quot;Self-Selected Switch&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Type</label>
    <type>Text</type>
</CustomField>