force-app/main/default/objects/Order__c/fields/ESIID_Number__c.field-meta.xml
<CustomField>
    <fullName>ESIID_Number__c</fullName>
    <description>The ESIID number of the meter to be switched to a plan</description>
    <inlineHelpText>The Electric Service Identifier ID number of the meter to be switched on for a plan.</inlineHelpText>
    <label>ESIID Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>