force-app/main/default/objects/Order__c/fields/Expected_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Confirmation_Date__c</fullName>
    <description>The date that this order is expected to be confirmed by.  Either two days after approval or two days after the customer-selected initial date of service (whichever is later).</description>
    <formula>IF( OR(DATEVALUE( Order_Status_TS__c ) &gt; InitialDateofService__c, ISNULL(InitialDateofService__c )), 2+DATEVALUE( Order_Status_TS__c ), 2+InitialDateofService__c   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date that this order is expected to be confirmed by.  Either two days after approval or two days after the customer-selected initial date of service (whichever is later).</inlineHelpText>
    <label>Expected Confirmation Date</label>
    <type>Date</type>
</CustomField>