force-app/main/default/objects/Order__c/fields/export__c.field-meta.xml
<CustomField>
    <fullName>export__c</fullName>
    <label>export</label>
    <length>9</length>
    <type>Text</type>
</CustomField>