force-app/main/default/objects/Order__c/fields/exportCommision__c.field-meta.xml
<CustomField>
    <fullName>exportCommision__c</fullName>
    <label>exportCommision</label>
    <length>25</length>
    <type>Text</type>
</CustomField>