force-app/main/default/objects/Order__c/fields/exportCritCare__c.field-meta.xml
<CustomField>
    <fullName>exportCritCare__c</fullName>
    <label>exportCritCare</label>
    <length>10</length>
    <type>Text</type>
</CustomField>