force-app/main/default/objects/Order__c/fields/Exported_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Exported_Confirmation_Date__c</fullName>
    <label>Exported_Confirmation_Date</label>
    <type>Date</type>
</CustomField>