force-app/main/default/objects/Order__c/fields/exportEnrollment_Type__c.field-meta.xml
<CustomField>
    <fullName>exportEnrollment_Type__c</fullName>
    <label>exportEnrollment_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>