force-app/main/default/objects/Order__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <label>Failure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Rescinded</fullName>
            </value>
            <value>
                <fullName>Expired Order</fullName>
            </value>
            <value>
                <fullName>Invalid ESIID</fullName>
            </value>
            <value>
                <fullName>Not Field Completed</fullName>
            </value>
            <value>
                <fullName>Permit Issues</fullName>
            </value>
            <value>
                <fullName>Switch Hold</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Other (enter comments)</fullName>
            </value>
            <value>
                <fullName>---Select a reason---</fullName>
                <default>true</default>
                <label>---Select a reason---</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>