force-app/main/default/objects/Order__c/fields/Fixed_Energy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Energy_Rate__c</fullName>
    <label>Fixed Energy Rate</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>