force-app/main/default/objects/Order__c/fields/Formula_for_REP_Profile_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Formula_for_REP_Profile_Account_ID__c</fullName>
    <formula>REP_Profile__r.REP_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula for REP Profile Account ID</label>
    <type>Text</type>
</CustomField>