force-app/main/default/objects/Order__c/fields/Formula_for_REP_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Formula_for_REP_Profile_Name__c</fullName>
    <formula>REP_Profile__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula for REP Profile Name</label>
    <type>Text</type>
</CustomField>