force-app/main/default/objects/Order__c/fields/Free_Order__c.field-meta.xml
<CustomField>
    <fullName>Free_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Promotional or Incentive-based order.</description>
    <inlineHelpText>Promotional or Incentive-based order.</inlineHelpText>
    <label>Free Order</label>
    <type>Checkbox</type>
</CustomField>