force-app/main/default/objects/Order__c/fields/GA_Campaign__c.field-meta.xml
<CustomField>
    <fullName>GA_Campaign__c</fullName>
    <label>GA Campaign</label>
    <length>30</length>
    <type>Text</type>
</CustomField>