force-app/main/default/objects/Order__c/fields/GA_Content__c.field-meta.xml
<CustomField>
    <fullName>GA_Content__c</fullName>
    <label>GA Content</label>
    <length>30</length>
    <type>Text</type>
</CustomField>