force-app/main/default/objects/Order__c/fields/GA_Medium__c.field-meta.xml
<CustomField>
    <fullName>GA_Medium__c</fullName>
    <label>GA Medium</label>
    <length>30</length>
    <type>Text</type>
</CustomField>