force-app/main/default/objects/Order__c/fields/GA_Source__c.field-meta.xml
<CustomField>
    <fullName>GA_Source__c</fullName>
    <label>GA Source</label>
    <length>30</length>
    <type>Text</type>
</CustomField>