force-app/main/default/objects/Order__c/fields/GA_Term__c.field-meta.xml
<CustomField>
    <fullName>GA_Term__c</fullName>
    <label>GA Term</label>
    <length>30</length>
    <type>Text</type>
</CustomField>