force-app/main/default/objects/Order__c/fields/Gas_Choice_Year__c.field-meta.xml
<CustomField>
    <fullName>Gas_Choice_Year__c</fullName>
    <description>Choice Gas program year</description>
    <inlineHelpText>Choice Gas program year</inlineHelpText>
    <label>Gas Choice Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>