force-app/main/default/objects/Order__c/fields/Green_Order__c.field-meta.xml
<CustomField>
    <fullName>Green_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This customer purchased a 100% renewable/green plan.</description>
    <inlineHelpText>This customer purchased a 100% renewable/green plan.</inlineHelpText>
    <label>Green Order?</label>
    <type>Checkbox</type>
</CustomField>