force-app/main/default/objects/Order__c/fields/Incentive__c.field-meta.xml
<CustomField>
    <fullName>Incentive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The customer was offered and accepted our current incentive</description>
    <inlineHelpText>The customer was offered and accepted our current incentive</inlineHelpText>
    <label>Giftcard Incentive</label>
    <type>Checkbox</type>
</CustomField>