force-app/main/default/objects/Order__c/fields/InitialDateofService__c.field-meta.xml
<CustomField>
    <fullName>InitialDateofService__c</fullName>
    <description>Initial date of service.</description>
    <inlineHelpText>Date the change to new REP will occur.</inlineHelpText>
    <label>Date Requested</label>
    <type>Date</type>
</CustomField>