force-app/main/default/objects/Order__c/fields/kWh_rate_1000__c.field-meta.xml
<CustomField>
    <fullName>kWh_rate_1000__c</fullName>
    <description>For the rate the customer signed up for, what was the PUC 1000 kWh/month rate?</description>
    <inlineHelpText>For the rate the customer signed up for, what was the PUC 1000 kWh/month rate?</inlineHelpText>
    <label>kWh rate 1000</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>