force-app/main/default/objects/Order__c/fields/Last_4_SSN_of_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Last_4_SSN_of_Authorized__c</fullName>
    <label>Last 4 SSN of Authorized</label>
    <length>4</length>
    <type>Text</type>
</CustomField>