force-app/main/default/objects/Order__c/fields/Last_Fixed_Position__c.field-meta.xml
<CustomField>
    <fullName>Last_Fixed_Position__c</fullName>
    <description>FOM for the last fixed position on this order</description>
    <inlineHelpText>FOM for the last fixed position on this order</inlineHelpText>
    <label>Last Fixed Position</label>
    <type>Date</type>
</CustomField>