force-app/main/default/objects/Order__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <description>Where to send the customer&#39;s bill</description>
    <inlineHelpText>Where to send the customer&#39;s bill</inlineHelpText>
    <label>Mailing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>