force-app/main/default/objects/Order__c/fields/Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State__c</fullName>
    <description>Where to send the customer&#39;s bill</description>
    <inlineHelpText>Where to send the customer&#39;s bill</inlineHelpText>
    <label>Mailing State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Texas</fullName>
                <default>true</default>
                <label>Texas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>