force-app/main/default/objects/Order__c/fields/Mailing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip_Code__c</fullName>
    <description>Where to send the customer&#39;s bill</description>
    <inlineHelpText>Where to send the customer&#39;s bill</inlineHelpText>
    <label>Mailing Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>