force-app/main/default/objects/Order__c/fields/Margin_at_Sale__c.field-meta.xml
<CustomField>
    <fullName>Margin_at_Sale__c</fullName>
    <description>When the order was placed, how much margin did we expect to make?</description>
    <inlineHelpText>When the order was placed, how much margin did we expect to make?</inlineHelpText>
    <label>Margin at Sale</label>
    <precision>13</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>