force-app/main/default/objects/Order__c/fields/Monthly_Residential_Residual_Commission__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Residential_Residual_Commission__c</fullName>
    <formula>IF( Record_Type_Name__c = &quot;Electric Order&quot;, 5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Residential Residual Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>