force-app/main/default/objects/Order__c/fields/Move_out_ESID__c.field-meta.xml
<CustomField>
    <fullName>Move_out_ESID__c</fullName>
    <description>Which ESID is the customer moving from?</description>
    <inlineHelpText>Which ESID is the customer moving from?</inlineHelpText>
    <label>Move out ESID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>